App Theme (light & dark) Done and edited sebha tab UI.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -15,5 +15,7 @@
   "alQuranAlKarimStation" : "إذاعة القرآن الكريم",
   "settings" : "الإعدادات",
   "darkMode" : "الوضع الليلى",
-  "chooseLanguage" : "اختر اللغة"
+  "chooseLanguage" : "اختر اللغة",
+  "order" : "الترتيب",
+  "ayat" : "آيه"
 }
