Updated Sebha screen & splash screen.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -17,5 +17,7 @@
   "darkMode" : "الوضع الليلى",
   "chooseLanguage" : "اختر اللغة",
   "order" : "الترتيب",
-  "ayat" : "آيه"
+  "ayat" : "آيه",
+  "saveChanges" : "حفظ التعديلات",
+  "pleaseEnterAValidNumber" : "برجاء إدخال رقم صحيح"
 }
