--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,5 +17,7 @@
   "darkMode" : "Dark Mode",
   "chooseLanguage" : "Choose Language",
   "order" : "Order",
-  "ayat" : "āyāt"
+  "ayat" : "āyāt",
+  "saveChanges" : "Save Changes",
+  "pleaseEnterAValidNumber" : "Please enter a valid number"
 }
